# pwmma

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: energy_coupling_workflow.md  physical_picture.md
src/pwmma/: __init__.py  analysis.py  analysis_plotting.py  config.py  coupling_matrix.py  gpu.py  inputs.py  main.py  solver.py  spar_model.py  utils.py
src/pwmma/gui/: __init__.py  adapter.py  app.py  callbacks.py  defaults.py  figures.py  layout.py
src/pwmma/gui/assets/: style.css
src/pwmma/io/: __init__.py  filenames.py  numpy.py
src/pwmma/numerics/: __init__.py  bessel_zeros.py  cm.py  cm_aux.py  cm_cc.py  cm_cr.py  cm_rc.py  cm_rr.py  gsm.py
tests/: test_analysis.py  test_cache_filenames.py  test_cm_cache.py  test_cm_cc_singularity.py  test_cm_ground_truth.py  test_cm_vectorized.py  test_contraction_junction.py  test_coupling_matrix.py  test_gpu.py  test_gui_adapter.py  test_gui_app.py  test_gui_figures.py  test_progress.py  test_solver.py  test_spar_model.py  test_thread_limits.py
